--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,11 +1,159 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Using Predictive Modeling to Get More 5-Star Airbnb Reviews\n",
+    "- Prepared by: Ahmet KARAOGLAN, Data Scientist\n",
+    "\n",
+    "#### Business Problem\n",
+    "\n",
+    "Oceanside Property Management is a property management company located in San Diego California. Their main business is managing rental properties. However, they have recently noticed that a lot of Airbnb hosts have been reaching out to them for guidance. These hosts are mostly uninterested in having OPM manage their rentals, however they wany some help in increasing their success as Airbnb hosts.\n",
+    "\n",
+    "There have been so many Airbnb hosts reaching out that OPM has decided that this can be a good side-business for them. So they plan to officially addmairbnb consulting as a service that they provide. In their initial research they found that the top questions that potential clients who wish to utlize this service are:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "- \"What can I do to get more 5 star ratings?\"\n",
+    "- \"Can you help me reach Superhost status? (or maintain Superhost status)\n",
+    "\n",
+    "\n",
+    "\n",
+    "These questions are understandable because Airbnb puts a huge focus on getting 5 star overall ratings. They also highly publicize the benefits of getting (and maintaining) Superhost status.\n",
+    "\n",
+    "Oceanside Property Management has decided that the main focus of their service will be helping clients get more 5 star reviews. Therefore they have tasked me with providing the following:\n",
+    "\n",
+    "\n",
+    "\n",
+    "- A model that will predict whether a specific rental unit should get a 5 Star Overall score based on other available information.\n",
+    "- An industry analysis of AirBnb in San Diego. Specifically looking for any insight that they can give to their clients that will give them a leg up on people who don't use their consulting service.\n",
+    "\n",
+    "They also want me to answer the following questions:\n",
+    "\n",
+    "- Is there a significant advantage to being a Superhost? (is it worth all the effort to get this status and maintain it?)\n",
+    "- How do we determine whether a Host \"should\" be getting 5 Star reviews?\n",
+    "- What factors are most important in determining a 5 Star Overall Rating? (what aspects should they most focus on)\n",
+    "\n",
+    "And finally, they want to know where their consulting service can make the most impact, so \n",
+    "they know which features to market and/or which hosts to market to.\n",
+    "\n",
+    "#### Understanding AirBnb\n",
+    "\n",
+    "\n",
+    "#### Who uses AirBnb?\n",
+    "\n",
+    "\n",
+    "information from: https://listwithclever.com/research/airbnb-vs-hotels-study/#sources, accessed 6/21/22\n",
+    "\n",
+    "- Initially, the idea of staying in a random person’s home was viewed as absurd and dangerous, but public perception of peer-to-peer (P2P) vacation rentals has shifted significantly in recent years.\n",
+    "- A 2016 Goldman Sachs study found that,“If people have stayed in peer-to-peer lodging in the last five years, the likelihood that they prefer traditional hotels is halved (79 percent vs. 40 percent).”\n",
+    "- Airbnb is becoming the preferred choice of vacationers — 60% of travelers who use both Airbnb and hotels prefer Airbnb over comparable hotels when going on vacation\n",
+    "- 68% of business travelers prefer staying in hotels when traveling for work, and they're more likely to have a negative experience at an Airbnb\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "information from: https://www.torontomu.ca/news-events/news/2016/10/why-tourists-choose-airbnb-over-hotels/ accessed 6/21/22\n",
+    "\n",
+    "David Guttentag, professor at the Ted Rogers School of Hospitality and Tourism Management, identifies five types of Airbnb guests based on his 2016 study:\n",
+    "\n",
+    "- Money savers: Choose Airbnb because of affordability\n",
+    "- Home seekers: Interested in household amenities and larger spaces\n",
+    "- Collaborative consumers: Motivated by the share economy philosophy and the ability to have an authentic experience\n",
+    "- Pragmatic novelty seekers: While not regular Airbnb users, these travelers are drawn to the novelty of Airbnb\n",
+    "- Interactive novelty seekers: Want to interact with their host or other locals\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Importance of 5 Star Reviews and Rating\n",
+    "\n",
+    "AirBnb focuses on exceeding customer expectations, which is why they strictly require that hosts maintain a near perfect rating in order to remain on the service.\n",
+    "\n",
+    "#### Importance of Superhost\n",
+    "- information from https://www.airbnb.com/d/superhost. Accessed 6/16/22\n",
+    "\n",
+    "#### Advantages:\n",
+    "\n",
+    "- Superhost badge to stand out among other hosts.\n",
+    "- Customers can filter search results to show only superhosts.\n",
+    "\n",
+    "#### Requirements:\n",
+    "\n",
+    "- Minimum 4.8 overall rating.\n",
+    "- 10 stays over the last year.\n",
+    "- < 1% Cancellation Rate.\n",
+    "- At least 90% Response Rate.\n",
+    "- Reassessed every 3 months.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Problems with Airbnb Data and/or Ratings System\n",
+    "\n",
+    "The review data is incredibly skewed because Airbnb requires such a high rating. Even though there is a 5 point scale, Anything lower than a 4.8 is seen as \"bad\".\n",
+    "\n",
+    "- So while this is technically a 5pt scale (as a reviewer can give 1 - 5 stars, with no partial stars allowed), getting a 4.0 average could result in being de-listed from the service!\n",
+    "\n",
+    "In order to stay at a 4.8 overall rating:\n",
+    "\n",
+    "- a host will need to have four 5-star reviews to offset a single 4-star review.\n",
+    "- a host will need to have ten 5-star reviews to offset a single 3-star review.\n",
+    "\n",
+    "The major problem with this review system is that airbnb guests often assume that airbnb's review scale functions similarly to a hotel review scale, which also uses 5 stars, with 3 considered average, 4 above average, and 5 star being the best possible experience.\n",
+    "\n",
+    "from https://medium.com/@campbellandia/how-to-avoid-the-dreaded-4-star-review-a-guide-for-airbnb-hosts-cdf482d083fe\n",
+    "\n",
+    "- The problem stems from the fundamental difference in what most people think a 5-star rating system is, and what AirBnB’s system actually is. The vast majority of people think that a 4-star review is perfectly appropriate; Their stay was good, they enjoyed themselves, but your place wasn’t the Vanderbilt Suite at the Plaza. What they don’t understand is that if a listing gets too many 4-star reviews the AirBnB platform begins to send warnings to hosts that their listing will be removed.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### My Process\n",
+    "#### The Problem\n",
+    "\n",
+    "The big concern that Airbnb Hosts haveis how to ensure 5-Star Overall reviews. While the other review categories certainly factor into a guest's review of a property, the Overall rating itself doesn't factor anything else in. It is just purely what the guest put in for Overall Rating. \"How to get more 5 Star Reviews\" is the problem that I'm seeking to solve.\n",
+    "\n",
+    "#### What I'm Looking For:\n",
+    "\n",
+    "I have been tasked with creating a model that will predict whether or not a unit will generate 5-star reviews. The best way to find this is create a classification for whether a unit has a perfect 5.0 overall rating, and then train a model to predict whether a unit will get that classification or not.\n",
+    "\n",
+    "##### Target: Elite Units\n",
+    "\n",
+    "- I am calling my target classification Elite Units.\n",
+    "- An Elite Unit is any Rental Unit that has a 4.9 - 5.0 Overall Rating.\n",
+    "- I am including 4.9 so there is a tiny bit of wiggle room, especially as a 4.9 overall rental unit would be seen as \"successful\" in Airbnb's eyes.\n",
+    "- These are the high-performing units that OPM clients want to emulate. Creating this classifier makes it easier to determine if they are performing on target, as well as letting us analyze any common trends, etc.\n",
+    "\n",
+    "##### Measuring Success: Booking Rate\n",
+    "\n",
+    "- At first glance, you might assume that Price would be the best performance metric. However, price is relative. A low priced 5 bedroom house will often cost more than a high priced 1 bedroom house.\n",
+    "- However, all Airbnb Hosts desire bookings. The more that their unit is booked, the more success that they have.\n",
+    "- Therefore, Booking Rate will be the feature that I use to measure how successful a unit is.\n",
+    "- Any features that cause a positive Trend in Booking Rate will be seen as successful.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Goals for my Model:\n",
+    "#### What I will be looking for in my models:\n",
+    "\n",
+    "- High Precision Score: I want to make sure that I am identifying as many airbnb units that meet my target criteria as possible. I will keep this in balance by checking F1 Score.\n",
+    "\n",
+    "- Good F1 Score: While I am ultimately not concerned with Recall , a good F1 score means that the model is performing well on both Recall and Precision. Since Recall and Precision are inverses of each other, a good F1 score ensures that the model isn't skewed too far toward one or the other. (ie, a model that predicts EVERY customer is within my target would have perfect Recall, but would be useless).\n",
+    "- High Cross Validation Score: This ensures that the model isn't overly trained on the test data and that it does a good job of predicted unseen and unknown data. (ie, the test set).\n",
+    "- Area Under the Curve (AUC): The ROC AUC Score measures the Area under the ROC curve, which means that it classifies the true positive rate against the false positive rate. The higher the score, the better performing the model is.\n",
+    "\n",
+    "##### That said, here is the scale that I will use to evaluate my models:\n",
+    "\n",
+    "- .69 or less: Model performs only slightly better than guessing and is worthless for my analysis.\n",
+    "- .70 - .79: Model still isn't performing very well, but is at minimum acceptable levels.\n",
+    "- .80 - .89: Model is performing fairly well. My goal is to be in this range or better.\n",
+    "- .90 - .99: Model is performing very well. I would be very happy to have a final model in this range."
+   ]
   },
   {
    "cell_type": "code",
